[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
divan = { version = "0.1.3", optional = true }
clap = { version = "4.4.10", features = ["derive"] }
anyhow = "1.0.75"
indoc = "2.0.4"

[[bench]]
name = "benches"
harness = false
